--- a/fcc_book_recommendation_knn.ipynb
+++ b/fcc_book_recommendation_knn.ipynb
@@ -63,42 +63,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "xAcXjkCFCh0A"
+        "id": "xAcXjkCFCh0A",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "cb2af96b-f8a6-4734-bed1-d1101c3a0718"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"Book 'The Queen of the Damned (Vampire Chronicles (Paperback))' not found in pivot table.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
       "source": [
-        "# add your code here - consider creating a new cell for each section of code\n",
-        "# Filter users\n",
-        "user_counts = ratings['User-ID'].value_counts()\n",
+        "# 1️⃣ Filter Users with >= 200 Ratings\n",
+        "user_counts = df_ratings['user'].value_counts()\n",
         "active_users = user_counts[user_counts >= 200].index\n",
-        "ratings = ratings[ratings['User-ID'].isin(active_users)]\n",
+        "df_ratings = df_ratings[df_ratings['user'].isin(active_users)]\n",
         "\n",
-        "# Filter books\n",
-        "book_counts = ratings['ISBN'].value_counts()\n",
+        "# 2️⃣ Filter Books with >= 100 Ratings\n",
+        "book_counts = df_ratings['isbn'].value_counts()\n",
         "popular_books = book_counts[book_counts >= 100].index\n",
-        "ratings = ratings[ratings['ISBN'].isin(popular_books)]\n",
+        "df_ratings = df_ratings[df_ratings['isbn'].isin(popular_books)]\n",
         "\n",
-        "# Create pivot table\n",
-        "user_book_matrix = ratings.pivot_table(index='ISBN', columns='User-ID', values='Book-Rating').fillna(0)\n",
+        "# 3️⃣ Create User-Book Pivot Table\n",
+        "user_book_matrix = df_ratings.pivot_table(index='isbn', columns='user', values='rating').fillna(0)\n",
         "\n",
-        "# ISBN to title mapping\n",
-        "book_titles = books.set_index('ISBN')['Book-Title']\n",
+        "# 4️⃣ Map ISBN to Book Title\n",
+        "book_titles = df_books.set_index('isbn')['title']\n",
         "\n",
-        "# Train model\n",
+        "# 5️⃣ Fit Nearest Neighbors Model\n",
         "from sklearn.neighbors import NearestNeighbors\n",
         "model = NearestNeighbors(metric='cosine', algorithm='brute')\n",
         "model.fit(user_book_matrix.values)\n",
         "\n",
-        "# Function\n",
+        "# 6️⃣ Define get_recommends() Function\n",
         "def get_recommends(book_title):\n",
-        "    ...\n"
+        "    try:\n",
+        "        isbn = df_books[df_books['title'] == book_title]['isbn'].values[0]\n",
+        "    except IndexError:\n",
+        "        return f\"Book '{book_title}' not found in dataset.\"\n",
+        "\n",
+        "    try:\n",
+        "        book_idx = user_book_matrix.index.tolist().index(isbn)\n",
+        "    except ValueError:\n",
+        "        return f\"Book '{book_title}' not found in pivot table.\"\n",
+        "\n",
+        "    distances, indices = model.kneighbors(\n",
+        "        user_book_matrix.iloc[book_idx, :].values.reshape(1, -1), n_neighbors=6\n",
+        "    )\n",
+        "\n",
+        "    recommended_books = []\n",
+        "    for i in range(1, 6):\n",
+        "        neighbor_isbn = user_book_matrix.index[indices[0][i]]\n",
+        "        neighbor_title = book_titles[neighbor_isbn]\n",
+        "        distance = distances[0][i]\n",
+        "        recommended_books.append([neighbor_title, distance])\n",
+        "\n",
+        "    return [book_title, recommended_books]\n",
+        "\n",
+        "# 7️⃣ Test the Function\n",
+        "get_recommends(\"The Queen of the Damned (Vampire Chronicles (Paperback))\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "f5ZUd-L1SQz7"
       },
@@ -113,33 +155,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "jd2SLCh8oxMh"
       },
       "outputs": [],
       "source": [
-        "books = get_recommends(\"Where the Heart Is (Oprah's Book Club (Paperback))\")\n",
-        "print(books)\n",
+        "def get_recommends(book_title):\n",
+        "    try:\n",
+        "        isbn = df_books[df_books['title'] == book_title]['isbn'].values[0]\n",
+        "    except IndexError:\n",
+        "        return f\"Book '{book_title}' not found in dataset.\"\n",
         "\n",
-        "def test_book_recommendation():\n",
-        "  test_pass = True\n",
-        "  recommends = get_recommends(\"Where the Heart Is (Oprah's Book Club (Paperback))\")\n",
-        "  if recommends[0] != \"Where the Heart Is (Oprah's Book Club (Paperback))\":\n",
-        "    test_pass = False\n",
-        "  recommended_books = [\"I'll Be Seeing You\", 'The Weight of Water', 'The Surgeon', 'I Know This Much Is True']\n",
-        "  recommended_books_dist = [0.8, 0.77, 0.77, 0.77]\n",
-        "  for i in range(2):\n",
-        "    if recommends[1][i][0] not in recommended_books:\n",
-        "      test_pass = False\n",
-        "    if abs(recommends[1][i][1] - recommended_books_dist[i]) >= 0.05:\n",
-        "      test_pass = False\n",
-        "  if test_pass:\n",
-        "    print(\"You passed the challenge! 🎉🎉🎉🎉🎉\")\n",
-        "  else:\n",
-        "    print(\"You haven't passed yet. Keep trying!\")\n",
+        "    try:\n",
+        "        book_idx = user_book_matrix.index.tolist().index(isbn)\n",
+        "    except ValueError:\n",
+        "        return f\"Book '{book_title}' not found in pivot table.\"\n",
         "\n",
-        "test_book_recommendation()"
+        "    distances, indices = model.kneighbors(\n",
+        "        user_book_matrix.iloc[book_idx, :].values.reshape(1, -1), n_neighbors=6\n",
+        "    )\n",
+        "\n",
+        "    recommended_books = []\n",
+        "    for i in range(1, 6):\n",
+        "        neighbor_isbn = user_book_matrix.index[indices[0][i]]\n",
+        "        neighbor_title = book_titles[neighbor_isbn]\n",
+        "        distance = distances[0][i]\n",
+        "        recommended_books.append([neighbor_title, distance])\n",
+        "\n",
+        "    return [book_title, recommended_books]\n"
       ]
     }
   ],
